# idk

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  idk.cpp  logger.hh
.builds_n_libs_EXT/.CMakeFiles/: CMakeLists.temp.cmake  Notes.cmake  REY_Fetch_fmk.cmake  REY_Fetch_libs_MOD.cmake  REY_Fetch_libs_MOD_win32.cmake  REY_FindVulkan.cmake
.builds_n_libs_EXT/REYNEP's_Journal/: 3.jan10_Task2_Extern_Libs_How.md  4.jan10_Task3_Pushing2NewCleanRepo.md
.forge/.CMakeFiles/: REY_Fetch_libs_REYMOD.cmake  REY_Fetch_libs_REYMOD_win32.cmake
.forge/.libs_MOD/: .gitignore  README.md  cmake_fetch_will_download_into_these_folders..txt
.forge/.libs_REYMOD/: .gitignore  README.md
.forge/REYNEP's_Journal/: 1.jan09_Task2_INITIALIZATION.cpp  2.jan10_Task1_VulkanSDK_WhatToLink.md  3.jan10_Task2_Extern_Libs_How.md  5.jan10_Task4_singleton_OS_Window.md  Track.md
amGHOST/: amGHOST_System.cpp  amGHOST_System.hh
